2008-05-28  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastService.cs:
	Listen to the new DBusCommandService

	* src/Clients/Halie/Halie/Client.cs: Proxy files to the DBusCommandService

	* src/Core/Banshee.Services/Banshee.ServiceStack/DBusCommandService.cs:
	A light weight remote object that raises events for command line arguments
	and files that can be pushed into it

	* src/Core/Banshee.Services/Banshee.ServiceStack/ServiceManager.cs:
	Register the DBusCommandService

	* src/Core/Banshee.Services/Banshee.ServiceStack/Application.cs:
	Use InternalName

2008-05-28  Aaron Bockover  <abock@gnome.org>

	* src/Clients/Halie/Halie/Client.cs: Added command line support for 
	mostly fully controlling the engine and the playback controller

2008-05-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Only set the
	AcceptableMimeTypes if they are null/haven't been set.

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Parse the .is_audio_player output_formats key.  The last fix required to
	close BGO #531769.

2008-05-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Only load files from the audio_folders directories.

2008-05-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdRipper.cs: Set the
	FileSize for just-ripped tracks.  Fixes BGO #532077.

2008-05-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/QueryField.cs: Fix bug with querying and
	smart playlists with "genre!:rock" would still match Rock.
	Fixes BGO #533143.

2008-05-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/FullscreenControls.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs: